--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -28,7 +28,7 @@ msgstr ""
 
 #: templates/5-index.html:12
 msgid "logged_in_as"
-msgstr "Vous êtes connecté en tant que %(username)s.""
+msgstr "Vous êtes connecté en tant que %(username)s."
 
 #: templates/5-index.html:14
 msgid "not_logged_in"
